fixing alignment of modal buttons on homework submit

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,7 +21,7 @@
 }
 
 .code-block {
-  width: 500px;
+  width: 600px;
   display: flex;
   flex-direction: column;
   padding: 30px 0;
